--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
 
-    <title>test</title>
+    <title>Preferences</title>
   </head>
 
 <body>
@@ -121,7 +121,7 @@
           <label for="def">Synonyms</label><br>
           <input type="checkbox" id="example" value="example">
           <label for="def">Examples</label><br>
-          <input type="checkbox" id="phonetic" value="phonetic">
+          <input type="checkbox" id="phonetic" value="phonetics">
           <label for="def">Phonetic spelling</label><br>
           <input type="checkbox" id="pronun" value="pronun" checked>
           <label for="def">Pronunciation</label><br>
