--- a/templates/revision.html
+++ b/templates/revision.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
 
-    <title>test</title>
+    <title>Register</title>
   </head>
 
 <body>
@@ -36,7 +36,7 @@
 
   <div class="container-fluid">
     <div id="revision-view" class="col-10 col-sm-9">
-      <span id="card-text" class="align-middle"></span>
+      <div id="card-text" class="align-middle"></div>
     </div>
   
     <div id="show-answer" class="rectangle-btn">
