--- a/templates/cards.html
+++ b/templates/cards.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
 
-    <title>test</title>
+    <title>Cards</title>
   </head>
 
 <body>
@@ -36,11 +36,10 @@
 
   <div id="deck-cards-container" class="container-fluid">
     <div class="row">
-      <div id="side-panel" class="col-3">
-
-      </div>
+      <div id="side-panel" class="col-3"></div>
       <div id="main-panel" class="col-9">
         <div id="card-main-panel">
+          <!-- DEFAULT -->
           <div id="front-container">
             <div id="define-translate-container">
               <!-- language selector -->
@@ -133,11 +132,105 @@
             <div id="card-back">
             </div>
           </div>
+
+          <!-- DEFAULT -->
+
+          <div id="add-multiple-container">
+            <div id="define-translate-checks-container">
+              <input class="translate-define-checks" type='checkbox' id="define-check">
+              <label class="translate-define-checks">Define</label>
+              <input class="translate-define-checks" type='checkbox' id="pronounce-check">
+              <label class="translate-define-checks">Pronounce</label>
+              <input class="translate-define-checks" type='checkbox' id="translate-check">
+              <label class="translate-define-checks">Translate</label>
+              <!-- language selector -->
+              <select id="language2">
+                <option value="AF">Afrikaans</option>
+                <option value="SQ">Albanian</option>
+                <option value="AR">Arabic</option>
+                <option value="HY">Armenian</option>
+                <option value="EU">Basque</option>
+                <option value="BN">Bengali</option>
+                <option value="BG">Bulgarian</option>
+                <option value="CA">Catalan</option>
+                <option value="KM">Cambodian</option>
+                <option value="ZH">Chinese (Mandarin)</option>
+                <option value="HR">Croatian</option>
+                <option value="CS">Czech</option>
+                <option value="DA">Danish</option>
+                <option value="NL">Dutch</option>
+                <option value="EN">English</option>
+                <option value="ET">Estonian</option>
+                <option value="FJ">Fiji</option>
+                <option value="FI">Finnish</option>
+                <option value="FR">French</option>
+                <option value="KA">Georgian</option>
+                <option value="DE">German</option>
+                <option value="EL">Greek</option>
+                <option value="GU">Gujarati</option>
+                <option value="HE">Hebrew</option>
+                <option value="HI">Hindi</option>
+                <option value="HU">Hungarian</option>
+                <option value="IS">Icelandic</option>
+                <option value="ID">Indonesian</option>
+                <option value="GA">Irish</option>
+                <option value="IT">Italian</option>
+                <option value="JA" selected>Japanese</option>
+                <option value="JW">Javanese</option>
+                <option value="KO">Korean</option>
+                <option value="LA">Latin</option>
+                <option value="LV">Latvian</option>
+                <option value="LT">Lithuanian</option>
+                <option value="MK">Macedonian</option>
+                <option value="MS">Malay</option>
+                <option value="ML">Malayalam</option>
+                <option value="MT">Maltese</option>
+                <option value="MI">Maori</option>
+                <option value="MR">Marathi</option>
+                <option value="MN">Mongolian</option>
+                <option value="NE">Nepali</option>
+                <option value="NO">Norwegian</option>
+                <option value="FA">Persian</option>
+                <option value="PL">Polish</option>
+                <option value="PT">Portuguese</option>
+                <option value="PA">Punjabi</option>
+                <option value="QU">Quechua</option>
+                <option value="RO">Romanian</option>
+                <option value="RU">Russian</option>
+                <option value="SM">Samoan</option>
+                <option value="SR">Serbian</option>
+                <option value="SK">Slovak</option>
+                <option value="SL">Slovenian</option>
+                <option value="ES">Spanish</option>
+                <option value="SW">Swahili</option>
+                <option value="SV">Swedish </option>
+                <option value="TA">Tamil</option>
+                <option value="TT">Tatar</option>
+                <option value="TE">Telugu</option>
+                <option value="TH">Thai</option>
+                <option value="BO">Tibetan</option>
+                <option value="TO">Tonga</option>
+                <option value="TR">Turkish</option>
+                <option value="UK">Ukrainian</option>
+                <option value="UR">Urdu</option>
+                <option value="UZ">Uzbek</option>
+                <option value="VI">Vietnamese</option>
+                <option value="CY">Welsh</option>
+                <option value="XH">Xhosa</option>
+              </select>
+            </div>
+            <div style="color: #00a2ff">
+              Standard cards format:<br>front1 | back1; front2 | back2<br><br>
+              Vocabulary cards format:<br>word1, word2, word3<br><br>
+
+            </div>
+            <textarea id="add-multiple-input"></textarea>
+          </div>
         </div>
 
         <div id="card-controls">
           <div id="card-delete" class="square-btn-background">
-            <img src="../static/images/delete.png" alt="">
+            <img src="../static/images/blue-delete.png" alt="">
           </div>
           <div id="card-add-multiple" class="square-btn-background">
             <img src="../static/images/add-multiple.png" alt="">
